# TinyCore-LM

./: .gitignore  00_START_HERE.md  01_CODEX_MASTER_PROMPT.md  02_PROJECT_MANIFEST.yaml  03_NON_NEGOTIABLES.md  GLOSSARY.md  IMPLEMENTATION_SEQUENCE_FOR_CODEX.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
benchmarks/: run_ablation.py  run_first_benchmark.py  run_instruction_code_benchmark.py  run_stage_3_tool_eval.py
configs/: ablation_toy.yaml  baseline_transformer_toy.yaml  first_benchmark_toy.yaml  function_calling_stage3_5090_tinycore.yaml  instruction_code_5090_tinycore.yaml  instruction_code_capacity.yaml  instruction_code_long_tinycore.yaml  instruction_code_permuted_tinycore.yaml  instruction_code_toy.yaml  tinycore_basis_toy.yaml  tinycore_lora_toy.yaml  typescript_github_5090_tinycore.yaml
decisions/: ADR-0001-project-thesis.md  ADR-0002-weight-composition-first.md  ADR-0003-native-low-bit.md  ADR-0004-shared-blocks-and-virtual-depth.md  ADR-0005-retrieval-not-memorisation.md
evals/: coding_agent_benchmark_plan.md  memory_benchmark_plan.md
machine_context/: codex_context.json
prompts/: codex_agent_engineer.md  codex_architect.md  codex_eval_engineer.md  codex_pytorch_engineer.md  codex_review_loop.md  codex_runtime_engineer.md  codex_stage3_function_calling_operator.md
pseudocode/: agent_loop.ts  composed_linear.py  model.py  runtime_loader.cpp  tinycore_block.py  train_loop.py  vscode_extension.ts
reports/: EXPECTED_FIRST_REPORT_SHAPE.json  progress.json
runtime/tinycore.cpp/: CMakeLists.txt
runtime/tinycore.cpp/src/: manifest_inspect.cpp  native_generate.cpp  native_runtime.cpp  native_runtime.hpp
runtime/tinycore.cpp/tests/: native_runtime_tests.cpp
schemas/: model_config.schema.json  (+3 more)
(+110 files in other folders)
